[package]
edition = "2021"
name = "pinyin-parser"
version = "0.1.8"
license = "MIT"
description = "Parses a string of pinyin syllables. Covers marginal cases such as `ẑ`, `ŋ` and `ê`."
repository = "https://github.com/sozysozbot/pinyin-parser-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1.19"
unicode-segmentation = "1.7.1"
